--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -61,7 +61,8 @@
             Aufsichtsratsvorsitzender von BlackRock Deutschland (2016–2020)
             knüpfte er die Kontakte, die ihm heute als "Kanzler der Konzerne"
             sicher nicht schaden. Kritiker nannten es Lobbyismus, er sah es wohl
-            als Vorbereitung.
+            als Vorbereitung. Jedenfalls nutzt er diese Expertise nun offenbar,
+            um deutsche Steuergelder kreativ in der EU zu verteilen.
           </p>
           <p>
             <strong>Privat:</strong> Verheiratet mit Charlotte Merz, drei
@@ -69,6 +70,10 @@
           </p>
 
           <h3>Politische Laufbahn</h3>
+          <p>
+            <strong>12/2025:</strong> Architekt der neuen EU-Schuldenunion
+            (gegen das eigene Wahlversprechen).
+          </p>
           <p>
             <strong>Seit 05/2025:</strong> Bundeskanzler (Kabinett Merz I) in
             einer GroKo mit der 16%-SPD.
@@ -96,6 +101,11 @@
             Kunststück, gleichzeitig als konservativer Hardliner und als
             Erfüller sozialdemokratischer Ausgabenträume aufzutreten – je
             nachdem, was für den Machterhalt gerade nötig ist.
+          </p>
+          <p>
+            Gestern noch Gralshüter der "Schwarzen Null" und Gegner von
+            Eurobonds, heute der Kanzler, der die Schuldenbremse umgeht und für
+            die Kredite anderer Länder bürgt.
           </p>
 
           <h3>FACTS</h3>
@@ -147,6 +157,84 @@
         />
       </div>
     </section>
+
+<!-- Highlight: Der Eurobonds-Verrat -->
+<div class="party-highlight" id="eurobonds">
+  <h3 class="party-highlight-title">
+    Der 90-Milliarden-Umfaller: "Eurobonds" durch die Hintertür
+  </h3>
+
+  <div class="highlight-skandal-scale">
+    <h4>>Wahlversprechen-Halbwertszeit: 3/10 📉📉📉⚪⚪⚪⚪⚪⚪⚪</h4>
+
+  <p class="highlight-description">
+    Vor der Wahl: "Russland zahlt". Nach der Wahl: "Der deutsche Steuerzahler bürgt".
+  </p>
+  <div class="gradient-bar-container">
+    <div class="gradient-bar-filled" style="width: 30%"></div>
+    <div class="gradient-bar-unfilled" style="width: 80%"></div>
+  </div>
+
+  <button class="toggle-button" onclick="toggleHighlight(this)">
+    Details anzeigen <span class="arrow">▼</span>
+  </button>
+
+  <div class="collapsible-content">
+    <p class="party-highlight-description">
+      Im Dezember 2025 konnte Friedrich Merz seinen bevorzugten Plan nicht durchsetzen: Die Ukraine-Hilfen primär aus <mark class="cdu">eingefrorenen russischen Vermögenswerten</mark> zu finanzieren. Der entschiedene Widerstand vor allem aus Belgien (und unterstützt von Frankreich sowie anderen) machte eine direkte Nutzung der Assets vorerst unmöglich – aus Angst vor rechtlichen Risiken und russischer Vergeltung.
+    </p>
+    
+    <p class="party-highlight-description">
+      Statt den Deal scheitern zu lassen oder auf seinem "Plan A" zu beharren, präsentierte Merz den Kompromiss als "großen Erfolg" und "pragmatische Lösung": Die EU nimmt gemeinsame Schulden am Kapitalmarkt auf – genau jene Form der Vergemeinschaftung, die die Union jahrzehntelang als "Eurobonds durch die Hintertür" verteufelt und vehement abgelehnt hat.
+    </p>
+
+    <p class="party-highlight-description">
+      <strong>Die Rechnung zahlt der Michel:</strong>
+      Während Länder wie Ungarn, die Slowakei und Tschechien sich fein rausgehalten haben, trägt Deutschland als größter Nettozahler das Hauptriesiko. Experten schätzen die zusätzliche Zinsbelastung für den EU-Haushalt auf rund <strong>3 Milliarden Euro jährlich</strong> – mit Deutschland als größtem Nettozahler im Hauptfokus.
+      Da renommierte Ökonomen (u. a. Ifo und ZEW) eine Rückzahlung des Kredits durch die Ukraine „in kaum einem Szenario“ für realistisch halten, ist es faktisch ein Geschenk auf Pump – finanziert durch deutsche Bonität. Merz verkaufte diese Kapitulation in Brüssel allen Ernstes als "Erfolg".
+    </p>
+
+    <div class="smallvideo-container two-videos">
+      <div class="video-wrapper">
+        <iframe
+          src="https://www.youtube.com/embed/hY8yENS3JCM?si=8Xvi8XW6vF89bQs-"
+          title="NIUS: Merz scheitert in Brüssel: EU gibt der Ukraine einen Mega-Kredit"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="video-wrapper">
+        <iframe
+          src="https://www.youtube.com/embed/-rghKmTqZck?si=EM0usJ5FoLcwOHYe"
+          title="So hat uns Frankreich ausgetrickst: Ukraine Kredit über 90 Milliarden (Verhandlungstechniken)"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+
+    <p class="party-highlight-date">
+      <strong>Zeitraum:</strong> Dezember 2025
+    </p>
+    <p class="party-highlight-source">
+      <strong>Quelle:</strong>
+      <a
+      href="https://think-beyondtheobvious.com/stelter-in-den-medien/wortbruch-wird-zur-teuren-regel/"
+      target="_blank"
+      >Beyond the Obvious: Wortbruch wird zur teuren Regel</a
+    >
+  </p>
+
+  <div class="party-highlight-hashtags">
+    <span class="hashtag">#eurobonds</span>
+    <span class="hashtag">#schuldenunion</span>
+    <span class="hashtag">#transferunion</span>
+    <span class="hashtag">#wahlbetrug</span>
+    <a href="../">#cdu</a>
+  </div>
+</div>
+</div>
+
 
     <!-- Highlights Section -->
     <section class="party-highlights">
