--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -170,7 +170,7 @@
   </h3>
 
   <div class="highlight-skandal-scale">
-    <h4>>Wahlversprechen-Halbwertszeit: 3/10 📉📉📉⚪⚪⚪⚪⚪⚪⚪</h4>
+    <h4>Wahlversprechen-Halbwertszeit: 3/10 📉📉📉⚪⚪⚪⚪⚪⚪⚪</h4>
 
   <p class="highlight-description">
     Vor der Wahl: "Russland zahlt". Nach der Wahl: "Der deutsche Steuerzahler bürgt".
