--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
       <section id="news-feed" class="news-feed">
         <h2>NEWS</h2>
         <ul class="news-list">
+          <!-- Merz Eurobonds -->
+          <li>
+            <strong>Dezember 2025:</strong> Merz (CDU) stimmt Eurobonds zu – Der
+            90-Milliarden-Wortbruch
+            <a href="/cducsu/merz/#eurobonds">Mehr lesen</a>
+          </li>
+
+          <!-- Bas Eintrag -->
           <li>
             <strong>Dezember 2025:</strong> Arbeitsministerin Bas (SPD) erklärt
             Arbeitgeber zum Feind
-            <a href="https://factico.eu/spd/bas/#klassenkampf">Mehr lesen</a>
+            <a href="/spd/bas/#klassenkampf">Mehr lesen</a>
           </li>
-          <ul class="news-list">
-            <li>
-              <strong>Dezember 2025:</strong> So denkt Reichinnek (Linke) über die Ermordung von Charlie Kirk 
-              <a href="https://factico.eu//linke/reichinnek/#empathie">Mehr lesen</a>
-            </li>
+
+          <!-- Reichinnek Eintrag -->
           <li>
-            <strong>März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
-            <a href="https://factico.eu/cducsu/merz/#schuldenbremse"
-              >Mehr lesen</a
-            >
-          </li>
-          <li>
-            <strong>März 2025:</strong> Der Untergang der FDP
-            <a href="https://factico.eu/fdp/#fdp-untergang">Mehr lesen</a>
+            <strong>September 2025:</strong> So denkt Reichinnek (Linke) über
+            die Ermordung von Charlie Kirk
+            <a href="/linke/reichinnek/#empathie">Mehr lesen</a>
           </li>
         </ul>
       </section>
