--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -158,88 +158,108 @@
       </div>
     </section>
 
-
     <!-- Highlights Section -->
     <section class="party-highlights">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
-<!-- Highlight: Der Eurobonds-Verrat -->
-<div class="party-highlight" id="eurobonds">
-  <h3 class="party-highlight-title">
-    Der 90-Milliarden-Umfaller: "Eurobonds" durch die Hintertür
-  </h3>
+      <!-- Highlight: Der Eurobonds-Verrat -->
+      <div class="party-highlight" id="eurobonds">
+        <h3 class="party-highlight-title">
+          Der 90-Milliarden-Umfaller: "Eurobonds" durch die Hintertür
+        </h3>
 
-  <div class="highlight-skandal-scale">
-    <h4>Wahlversprechen-Halbwertszeit: 3/10 📉📉📉⚪⚪⚪⚪⚪⚪⚪</h4>
+        <div class="highlight-skandal-scale">
+          <h4>Wahlversprechen-Halbwertszeit: 3/10 📉📉📉⚪⚪⚪⚪⚪⚪⚪</h4>
 
-  <p class="highlight-description">
-    Vor der Wahl: "Russland zahlt". Nach der Wahl: "Der deutsche Steuerzahler bürgt".
-  </p>
-  <div class="gradient-bar-container">
-    <div class="gradient-bar-filled" style="width: 30%"></div>
-    <div class="gradient-bar-unfilled" style="width: 80%"></div>
-  </div>
+          <p class="highlight-description">
+            Vor der Wahl: "Russland zahlt". Nach der Wahl: "Der deutsche
+            Steuerzahler bürgt".
+          </p>
+        </div>
 
-  <button class="toggle-button" onclick="toggleHighlight(this)">
-    Details anzeigen <span class="arrow">▼</span>
-  </button>
+        <div class="gradient-bar-container">
+          <div class="gradient-bar-filled" style="width: 30%"></div>
+          <div class="gradient-bar-unfilled" style="width: 80%"></div>
+        </div>
 
-  <div class="collapsible-content">
-    <p class="party-highlight-description">
-      Im Dezember 2025 konnte Friedrich Merz seinen bevorzugten Plan nicht durchsetzen: Die Ukraine-Hilfen primär aus <mark class="cdu">eingefrorenen russischen Vermögenswerten</mark> zu finanzieren. Der entschiedene Widerstand vor allem aus Belgien (und unterstützt von Frankreich sowie anderen) machte eine direkte Nutzung der Assets vorerst unmöglich – aus Angst vor rechtlichen Risiken und russischer Vergeltung.
-    </p>
-    
-    <p class="party-highlight-description">
-      Statt den Deal scheitern zu lassen oder auf seinem "Plan A" zu beharren, präsentierte Merz den Kompromiss als "großen Erfolg" und "pragmatische Lösung": Die EU nimmt gemeinsame Schulden am Kapitalmarkt auf – genau jene Form der Vergemeinschaftung, die die Union jahrzehntelang als "Eurobonds durch die Hintertür" verteufelt und vehement abgelehnt hat.
-    </p>
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
 
-    <p class="party-highlight-description">
-      <strong>Die Rechnung zahlt der Michel:</strong>
-      Während Länder wie Ungarn, die Slowakei und Tschechien sich fein rausgehalten haben, trägt Deutschland als größter Nettozahler das Hauptriesiko. Experten schätzen die zusätzliche Zinsbelastung für den EU-Haushalt auf rund <strong>3 Milliarden Euro jährlich</strong> – mit Deutschland als größtem Nettozahler im Hauptfokus.
-      Da renommierte Ökonomen (u. a. Ifo und ZEW) eine Rückzahlung des Kredits durch die Ukraine „in kaum einem Szenario“ für realistisch halten, ist es faktisch ein Geschenk auf Pump – finanziert durch deutsche Bonität. Merz verkaufte diese Kapitulation in Brüssel allen Ernstes als "Erfolg".
-    </p>
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Im Dezember 2025 konnte Friedrich Merz seinen bevorzugten Plan nicht
+            durchsetzen: Die Ukraine-Hilfen primär aus
+            <mark class="cdu">eingefrorenen russischen Vermögenswerten</mark> zu
+            finanzieren. Der entschiedene Widerstand vor allem aus Belgien (und
+            unterstützt von Frankreich sowie anderen) machte eine direkte
+            Nutzung der Assets vorerst unmöglich – aus Angst vor rechtlichen
+            Risiken und russischer Vergeltung.
+          </p>
 
-    <div class="smallvideo-container two-videos">
-      <div class="video-wrapper">
-        <iframe
-          src="https://www.youtube.com/embed/hY8yENS3JCM?si=8Xvi8XW6vF89bQs-"
-          title="NIUS: Merz scheitert in Brüssel: EU gibt der Ukraine einen Mega-Kredit"
-          frameborder="0"
-          allowfullscreen
-        ></iframe>
+          <p class="party-highlight-description">
+            Statt den Deal scheitern zu lassen oder auf seinem "Plan A" zu
+            beharren, präsentierte Merz den Kompromiss als "großen Erfolg" und
+            "pragmatische Lösung": Die EU nimmt gemeinsame Schulden am
+            Kapitalmarkt auf – genau jene Form der Vergemeinschaftung, die die
+            Union jahrzehntelang als "Eurobonds durch die Hintertür" verteufelt
+            und vehement abgelehnt hat.
+          </p>
+
+          <p class="party-highlight-description">
+            <strong>Die Rechnung zahlt der Michel:</strong>
+            Während Länder wie Ungarn, die Slowakei und Tschechien sich fein
+            rausgehalten haben, trägt Deutschland als größter Nettozahler das
+            Hauptriesiko. Experten schätzen die zusätzliche Zinsbelastung für
+            den EU-Haushalt auf rund
+            <strong>3 Milliarden Euro jährlich</strong> – mit Deutschland als
+            größtem Nettozahler im Hauptfokus. Da renommierte Ökonomen (u. a.
+            Ifo und ZEW) eine Rückzahlung des Kredits durch die Ukraine „in kaum
+            einem Szenario“ für realistisch halten, ist es faktisch ein Geschenk
+            auf Pump – finanziert durch deutsche Bonität. Merz verkaufte diese
+            Kapitulation in Brüssel allen Ernstes als "Erfolg".
+          </p>
+
+          <div class="smallvideo-container two-videos">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/hY8yENS3JCM?si=8Xvi8XW6vF89bQs-"
+                title="NIUS: Merz scheitert in Brüssel: EU gibt der Ukraine einen Mega-Kredit"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/-rghKmTqZck?si=EM0usJ5FoLcwOHYe"
+                title="So hat uns Frankreich ausgetrickst: Ukraine Kredit über 90 Milliarden (Verhandlungstechniken)"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> Dezember 2025
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://think-beyondtheobvious.com/stelter-in-den-medien/wortbruch-wird-zur-teuren-regel/"
+              target="_blank"
+              >Beyond the Obvious: Wortbruch wird zur teuren Regel</a
+            >
+          </p>
+
+          <div class="party-highlight-hashtags">
+            <span class="hashtag">#eurobonds</span>
+            <span class="hashtag">#schuldenunion</span>
+            <span class="hashtag">#transferunion</span>
+            <span class="hashtag">#wahlbetrug</span>
+            <a href="../">#cdu</a>
+          </div>
+        </div>
       </div>
-      <div class="video-wrapper">
-        <iframe
-          src="https://www.youtube.com/embed/-rghKmTqZck?si=EM0usJ5FoLcwOHYe"
-          title="So hat uns Frankreich ausgetrickst: Ukraine Kredit über 90 Milliarden (Verhandlungstechniken)"
-          frameborder="0"
-          allowfullscreen
-        ></iframe>
-      </div>
-    </div>
-
-    <p class="party-highlight-date">
-      <strong>Zeitraum:</strong> Dezember 2025
-    </p>
-    <p class="party-highlight-source">
-      <strong>Quelle:</strong>
-      <a
-      href="https://think-beyondtheobvious.com/stelter-in-den-medien/wortbruch-wird-zur-teuren-regel/"
-      target="_blank"
-      >Beyond the Obvious: Wortbruch wird zur teuren Regel</a
-    >
-  </p>
-
-  <div class="party-highlight-hashtags">
-    <span class="hashtag">#eurobonds</span>
-    <span class="hashtag">#schuldenunion</span>
-    <span class="hashtag">#transferunion</span>
-    <span class="hashtag">#wahlbetrug</span>
-    <a href="../">#cdu</a>
-  </div>
-</div>
-</div>
-
 
       <!-- Highlight: Schuldenbremse Versprechen gebrochen -->
       <div class="party-highlight" id="schuldenbremse">
