--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -212,7 +212,7 @@
           </p>
 
           <p class="party-highlight-source">
-            <strong>Quelle:</strong> Tagesspiegel-
+            <strong>Quelle:</strong> Tagesspiegel:
             <a
               href="https://www.tagesspiegel.de/politik/eine-fehlbesetzung-im-amt-union-und-handwerk-kritisieren-arbeitsministerin-bas-15001022.html"
               target="_blank"
