--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <!-- NEU: TIKTOK & INSTAGRAM ICONS -->
           <!-- Wir nutzen einen Trenner (Pipe |) oder einfach den Abstand, hier nutzen wir den Abstand -->
           <a
-            href="https://www.tiktok.com/@DEIN_NAME"
+            href="https://www.tiktok.com/@factico.eu"
             target="_blank"
             class="nav-icon-link tiktok"
             aria-label="TikTok"
@@ -53,7 +53,7 @@
           </a>
 
           <a
-            href="https://www.instagram.com/DEIN_NAME"
+            href="https://www.instagram.com/factico.eu"
             target="_blank"
             class="nav-icon-link insta"
             aria-label="Instagram"
