--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
               aria-label="TikTok"
             >
               <svg viewBox="0 0 24 24" fill="currentColor">
+                <!-- Dieser Pfad sitzt sauber in der Mitte -->
                 <path
-                  d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.65-1.58-1.09v8.32c-.01 2.5-1.43 4.79-3.66 5.96-2.22 1.18-4.94.99-7- .51-2.07-1.49-3-4.1-2.39-6.55.61-2.45 2.66-4.32 5.17-4.71V14.6c-1.41.25-2.58 1.34-2.83 2.74-.24 1.4.52 2.78 1.81 3.29 1.28.52 2.75.14 3.63-.94.88-1.09 1.15-2.5.73-3.84-.03-2.91-.01-5.83-.01-8.74 0-1.87 0-3.74 0-5.61.02-.32.02-.65.43-.68z"
+                  d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
                 />
               </svg>
             </a>
