--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-content">
-        <!-- Bestehende Sektionen -->
+        <!-- 1. Spalte: Rechtliches -->
         <div class="footer-section">
           <h4>Rechtliches</h4>
           <ul>
@@ -247,6 +247,8 @@
             <li><a href="/datenschutz/">Datenschutz</a></li>
           </ul>
         </div>
+
+        <!-- 2. Spalte: Kontakt -->
         <div class="footer-section">
           <h4>Kontakt</h4>
           <ul>
@@ -255,28 +257,31 @@
           </ul>
         </div>
 
-        <!-- NEU: Social Media Sektion -->
+        <!-- 3. Spalte: Social Media (NEU) -->
         <div class="footer-section">
           <h4>Folge uns</h4>
-          <div class="social-icons footer-icons">
-            <!-- Gleiche Icons wie oben, aber Klasse footer-icons sorgt für Farbe -->
+          <!-- Neuer Container für die Icons -->
+          <div class="footer-icons">
             <a
               href="https://www.tiktok.com/@factico.eu"
               target="_blank"
               aria-label="TikTok"
+              class="footer-icon-link tiktok"
             >
-              <svg viewBox="0 0 24 24">
+              <svg viewBox="0 0 24 24" fill="currentColor">
                 <path
-                  d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.65-1.58-1.09v8.32c-.01 2.5-1.43 4.79-3.66 5.96-2.22 1.18-4.94.99-7- .51-2.07-1.49-3-4.1-2.39-6.55.61-2.45 2.66-4.32 5.17-4.71V14.6c-1.41.25-2.58 1.34-2.83 2.74-.24 1.4.52 2.78 1.81 3.29 1.28.52 2.75.14 3.63-.94.88-1.09 1.15-2.5.73-3.84-.03-2.91-.01-5.83-.01-8.74 0-1.87 0-3.74 0-5.61.02-.32.02-.65.43-.68z"
+                  d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
                 />
               </svg>
             </a>
+
             <a
-              href="https://www.instagram.com/factico.eu/"
+              href="https://www.instagram.com/factico.eu"
               target="_blank"
               aria-label="Instagram"
+              class="footer-icon-link insta"
             >
-              <svg viewBox="0 0 24 24">
+              <svg viewBox="0 0 24 24" fill="currentColor">
                 <path
                   d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"
                 />
@@ -285,7 +290,6 @@
           </div>
         </div>
       </div>
-      <!-- Footer Bottom bleibt gleich -->
     </footer>
 
     <script src="script.js"></script>
