--- a/fdp/strack-zimmermann/index.html
+++ b/fdp/strack-zimmermann/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../../styles.css">
   </head>
-  <body class="gruene-root">
+  <body class="fdp-root">
     <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
@@ -25,7 +25,7 @@
           <h1 class="party-politician-name">MARIE-AGNES STRACK-ZIMMERMANN</h1>
         </div>
 
-        <!-- FDP-Logo als Link zu gruene -->
+        <!-- FDP-Logo als Link zu FDP -->
         <a href="../">
           <img
             src="https://i.imgur.com/R3MTehN.png"
