--- a/linke/index.html
+++ b/linke/index.html
@@ -45,7 +45,7 @@
         identisch mit der ehemaligen Sozialistischen Einheitspartei Deutschlands
         (SED) der DDR. Dies bestätigte die Partei selbst vor Gericht, als ihr
         damaliger Bundesschatzmeister Karl Holluba 2009 an Eides statt erklärte:
-        "DIE LINKE ist rechtsidentisch mit der Linkspartei.PDS, die es seit 2005
+        "DIE LINKE ist rechtsidentisch mit der Linkspartei, die es seit 2005
         gab, und der PDS, die es vorher gab, und der SED, die es vorher gab."
         Kritiker sehen darin eine problematische Kontinuität zur
         DDR-Staatspartei, während die Partei betont, mit den antidemokratischen
@@ -53,13 +53,12 @@
       </p>
       <p>
         <strong>Vorwurf des Linksextremismus und Verfassungstreue:</strong> DIE
-        LINKE wird von politischen Gegnern und Medien immer wieder dem
-        Linksextremismus-Spektrum zugeordnet und es werden Zweifel an ihrer
-        Verfassungstreue geäußert. Kritiker verweisen auf Verbindungen einzelner
-        Parteimitglieder zu linksextremen Organisationen und fordern eine klare
-        Distanzierung von Gewalt und antidemokratischen Bestrebungen. Die Partei
-        selbst weist diese Vorwürfe zurück und betont ihre Verankerung im
-        demokratischen System.
+        LINKE wird immer wieder dem Linksextremismus-Spektrum zugeordnet und es
+        werden Zweifel an ihrer Verfassungstreue geäußert. Kritiker verweisen
+        auf Verbindungen einzelner Parteimitglieder zu linksextremen
+        Organisationen und fordern eine klare Distanzierung von Gewalt und
+        antidemokratischen Bestrebungen. Die Partei selbst weist diese Vorwürfe
+        zurück und betont ihre Verankerung im demokratischen System.
       </p>
       <p>
         <strong>Positionen zum Ukraine-Krieg und Russland:</strong> DIE LINKE
@@ -91,10 +90,10 @@
         Verbesserungen der Lebensbedingungen für Menschen mit niedrigen und
         mittleren Einkommen, eine ökologische und sozialverträgliche
         Wirtschaftspolitik sowie eine friedensorientierte Außenpolitik. Es
-        werden konkrete Maßnahmen vorgeschlagen, um Armut zu bekämpfen, die
-        Mieten zu senken, den Klimaschutz voranzutreiben und die Demokratie zu
-        stärken. Der Text betont die Notwendigkeit von mehr sozialer Teilhabe
-        und Mitbestimmung.
+        werden Maßnahmen vorgeschlagen, um Armut zu bekämpfen, die Mieten zu
+        senken, den Klimaschutz voranzutreiben und die Demokratie zu stärken.
+        Der Text betont die Notwendigkeit von mehr sozialer Teilhabe und
+        Mitbestimmung.
       </p>
       <p>
         Die Linke fordert die Einführung von Volksinitiativen, Volksbegehren und
