--- a/index.html
+++ b/index.html
@@ -257,6 +257,26 @@
           </ul>
         </div>
 
+        <!-- SUPPORT SECTION IM FOOTER -->
+        <div class="support-section">
+          <p class="support-text">
+            Gefällt dir unsere Arbeit? Wirf uns was in den Hut:
+          </p>
+          <a
+            href="https://ko-fi.com/DEIN_USERNAME"
+            target="_blank"
+            class="kofi-button"
+          >
+            <!-- Kaffee Icon SVG -->
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M2,21H20V19H2M20,8H18V5H20M20,3H4V13A4,4 0 0,0 8,17H14A4,4 0 0,0 18,13V10H20A2,2 0 0,0 22,8V5C22,3.89 21.1,3 20,3Z"
+              />
+            </svg>
+            <span>Einen Kaffee spendieren</span>
+          </a>
+        </div>
+
         <!-- 3. Spalte: Social Media (NEU) -->
         <div class="footer-section">
           <h4>Folge uns</h4>
