--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             Gefällt dir unsere Arbeit? Wirf uns was in den Hut:
           </p>
           <a
-            href="https://ko-fi.com/DEIN_USERNAME"
+            href="https://ko-fi.com/factico"
             target="_blank"
             class="kofi-button"
           >
