--- a/bsw/index.html
+++ b/bsw/index.html
@@ -160,55 +160,70 @@
 
 
 <footer class="party-footer">
-    <!-- 1. Bereich: Navigation & Socials -->
-    <div class="party-footer-content">
-      <!-- Link zur Startseite -->
-      <a href="../../" class="footer-home-link">
-        <span>🏠</span> Zur Startseite
+  <div class="party-footer-content">
+    <!-- 1. Zur Startseite -->
+    <a href="../../" class="footer-home-link">
+      <span>🏠</span> Zur Startseite
+    </a>
+
+    <!-- 2. NEU: Ko-fi Support Button -->
+    <div class="party-support">
+      <a
+        href="https://ko-fi.com/factico"
+        target="_blank"
+        class="kofi-button-party"
+      >
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path
+            d="M2,21H20V19H2M20,8H18V5H20M20,3H4V13A4,4 0 0,0 8,17H14A4,4 0 0,0 18,13V10H20A2,2 0 0,0 22,8V5C22,3.89 21.1,3 20,3Z"
+          />
+        </svg>
+        <span>Spendier uns 'nen Kaffee ☕</span>
       </a>
-
-      <!-- Social Media Icons (Kopiert aus deinem Haupt-Footer) -->
-      <div class="footer-icons party-icons">
-        <a
-          href="https://www.tiktok.com/@factico.eu"
-          target="_blank"
-          class="footer-icon-link tiktok"
-          aria-label="TikTok"
-        >
-          <svg viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
-            />
-          </svg>
-        </a>
-        <a
-          href="https://www.instagram.com/factico.eu"
-          target="_blank"
-          class="footer-icon-link insta"
-          aria-label="Instagram"
-        >
-          <svg viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"
-            />
-          </svg>
-        </a>
-      </div>
     </div>
 
-    <!-- 2. Bereich: Copyright & Links -->
-    <div class="party-footer-bottom">
-      <p>&copy; 2025 factico.</p>
-      <div class="legal-links">
-        <a href="../../impressum/">Impressum</a>
-        <a href="../../datenschutz/">Datenschutz</a>
-      </div>
+    <!-- 3. Social Media Icons -->
+    <div class="footer-icons party-icons">
+      <a
+        href="https://www.tiktok.com/@factico.eu"
+        target="_blank"
+        class="footer-icon-link tiktok"
+        aria-label="TikTok"
+      >
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path
+            d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
+          />
+        </svg>
+      </a>
+      <a
+        href="https://www.instagram.com/factico.eu"
+        target="_blank"
+        class="footer-icon-link insta"
+        aria-label="Instagram"
+      >
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path
+            d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"
+          />
+        </svg>
+      </a>
     </div>
-  </footer>
+  </div>
 
-  <!-- Der "Nach oben" Button (Schwimmend) -->
-  <a href="#" id="backToTop" title="Nach oben">↑</a>
+  <!-- Rechtliches -->
+  <div class="party-footer-bottom">
+    <p>&copy; 2025 factico.</p>
+    <div class="legal-links">
+      <a href="../../impressum/">Impressum</a>
+      <a href="../../datenschutz/">Datenschutz</a>
+    </div>
+  </div>
+</footer>
 
-  <script src="../../script.js"></script>
+<!-- Der "Nach oben" Button (Schwimmend) -->
+<a href="#" id="backToTop" title="Nach oben">↑</a>
+
+<script src="../../script.js"></script>
 </body>
 </html>
