--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -247,14 +247,29 @@
     </section>
 
     <footer class="party-footer">
-      <!-- 1. Bereich: Navigation & Socials -->
       <div class="party-footer-content">
-        <!-- Link zur Startseite -->
+        <!-- 1. Zur Startseite -->
         <a href="../../" class="footer-home-link">
           <span>🏠</span> Zur Startseite
         </a>
 
-        <!-- Social Media Icons (Kopiert aus deinem Haupt-Footer) -->
+        <!-- 2. NEU: Ko-fi Support Button -->
+        <div class="party-support">
+          <a
+            href="https://ko-fi.com/factico"
+            target="_blank"
+            class="kofi-button-party"
+          >
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M2,21H20V19H2M20,8H18V5H20M20,3H4V13A4,4 0 0,0 8,17H14A4,4 0 0,0 18,13V10H20A2,2 0 0,0 22,8V5C22,3.89 21.1,3 20,3Z"
+              />
+            </svg>
+            <span>Spendier uns 'nen Kaffee ☕</span>
+          </a>
+        </div>
+
+        <!-- 3. Social Media Icons -->
         <div class="footer-icons party-icons">
           <a
             href="https://www.tiktok.com/@factico.eu"
@@ -283,7 +298,7 @@
         </div>
       </div>
 
-      <!-- 2. Bereich: Copyright & Links -->
+      <!-- Rechtliches -->
       <div class="party-footer-bottom">
         <p>&copy; 2025 factico.</p>
         <div class="legal-links">
