--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -134,7 +134,7 @@
 
         <img
           class="bio-image"
-          src="https://i.imgur.com/LLDTjtS.png"
+          src="https://i.imgur.com/4wqJw3U.jpeg"
           alt="Lars Klingbeil"
         />
       </div>
