--- a/index.html
+++ b/index.html
@@ -259,9 +259,7 @@
 
         <!-- SUPPORT SECTION IM FOOTER -->
         <div class="support-section">
-          <p class="support-text">
-            Gefällt dir unsere Arbeit? Wirf uns was in den Hut:
-          </p>
+          <p class="support-text">Supporte unsere Arbeit:</p>
           <a
             href="https://ko-fi.com/factico"
             target="_blank"
