--- a/impressum/index.html
+++ b/impressum/index.html
@@ -25,6 +25,9 @@
         <h2 class="datenschutz-section-title">Angaben gemäß § 5 TMG</h2>
         <p class="datenschutz-text">
           <strong>factico.</strong><br />
+          Factico ist ein unabhängiges Meinungs- und Satireportal. Alle Angaben
+          ohne Gewähr. Politik ist schon ernst genug. <br />
+
           Betreiber der Webseite: <br />
           Andreas Siade<br />
           Adolf-Baeyer-Damm 8<br />
