--- a/oerr/index.html
+++ b/oerr/index.html
@@ -46,7 +46,7 @@
         <strong>Verfassungsauftrag:</strong> Information, Bildung, Beratung und
         Unterhaltung
       </p>
-      <p><strong>Jährliche Einnahmen:</strong> Über 8 Milliarden Euro</p>
+      <p><strong>Jährliche Einnahmen:</strong> Über 10 Milliarden Euro</p>
 
       <h3>FACTS</h3>
       <p>
@@ -95,7 +95,7 @@
 
         <!-- Skandal-Skala mit Farbverlauf -->
         <div class="highlight-skandal-scale">
-          <h4>Abzocke-Skala: 9/10</h4>
+          <h4>Abzocke: 9/10</h4>
           <div class="gradient-bar-container">
             <div class="gradient-bar-filled" style="width: 90%"></div>
             <div class="gradient-bar-unfilled" style="width: 10%"></div>
@@ -124,10 +124,10 @@
             Beugehaft - ein Skandal in einem angeblich freien Land.
           </p>
           <p class="party-highlight-description">
-            Besonders perfide: Auch wer kein Fernsehen schaut und kein Radio
-            hört, muss zahlen. Niemand hat je ÖRR-Produkte bestellt, aber zur
-            Kasse gebeten werden wir trotzdem alle.
-            <strong>keine Verhältnismäßigkeit</strong>.
+            <strong>Keine Verhältnismäßigkeit</strong> - besonders perfide: Auch
+            wer kein Fernsehen schaut und kein Radio hört, muss zahlen. Niemand
+            hat je ÖRR-Produkte bestellt, aber zur Kasse gebeten werden wir
+            trotzdem alle.
           </p>
 
           <p class="party-highlight-date">
@@ -269,6 +269,142 @@
             <span class="hashtag">#haltungsjournalismus</span>
             <span class="hashtag">#einseitigkeit</span>
             <span class="hashtag">#propaganda</span>
+          </p>
+        </div>
+      </div>
+
+      <!-- Highlight: Pflanzen-Sprengstoff -->
+      <div class="party-highlight">
+        <h3 class="party-highlight-title">
+          Der "Pflanzen-Sprengstoff": Wenn Faktenfinder Experten zu eigenen
+          Übersetzungsfehlern befragen
+        </h3>
+
+        <!-- Skandal-Skala -->
+        <div class="highlight-skandal-scale">
+          <h4>ARD-Fakten: 1/10</h4>
+          <div class="gradient-bar-container">
+            <!-- ÖRR nutzt kritisches Rot für den Füllstand via CSS Variablen -->
+            <div class="gradient-bar-filled" style="width: 10%"></div>
+            <div class="gradient-bar-unfilled" style="width: 90%"></div>
+          </div>
+        </div>
+
+        <!-- Button -->
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
+
+        <!-- Content -->
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Was tun, wenn man für
+            <mark class="oerr">8,5 Milliarden Euro</mark> im Jahr
+            Qualitätsjournalismus simulieren möchte? Richtig: Man nimmt einen
+            englischen Fachbegriff, übersetzt ihn falsch und befragt dann
+            ernsthaft einen deutschen Experten, warum der Autor (den man
+            diskreditieren will) so einen Unsinn schreibt.
+          </p>
+          <p class="party-highlight-description">
+            Am 23. Februar 2023 leistete sich der <b>ARD-Faktenfinder</b> unter
+            Journalist <b>Pascal Siggelkow</b> einen der peinlichsten
+            Übersetzungsfehler der Mediengeschichte. In einem Bericht, der die
+            Recherchen von Investigativ-Legende <b>Seymour Hersh</b> zur
+            Nord-Stream-Sprengung diskreditieren sollte, übersetzte die
+            Redaktion den englischen Fachbegriff
+            <i>"plant shaped C4 charges"</i> (platzierte Hohlladungen) allen
+            Ernstes mit <mark class="oerr">"Sprengstoff in Pflanzenform"</mark>.
+          </p>
+          <p class="party-highlight-description">
+            <b>Die Experten-Analyse:</b><br />
+            Statt kurz innezuhalten, rief die Tagesschau den
+            Sprengstoff-Experten <b>David Domjahn</b> (KIT) an, um diese
+            botanische Sensation physikalisch zu prüfen. Der Experte versuchte
+            daraufhin ernsthaft, Logik in den Übersetzungsfehler zu bringen:
+          </p>
+          <p
+            class="party-highlight-description"
+            style="
+              border-left: 4px solid var(--oerr-mark-color);
+              padding-left: 10px;
+              font-style: italic;
+            "
+          >
+            „Ein etwa 300-kg-Pflanzenbewuchs hätte entsprechend
+            <b>Zeitvorlauf für das Wachstum</b> benötigt und dürfte daher nicht
+            zur Tarnung geeignet sein [...] da die Nord-Stream-2-Gasleitung erst
+            kürzlich fertiggestellt wurde.“
+          </p>
+          <p class="party-highlight-description">
+            Es geht noch weiter: Man philosophierte über
+            <mark class="oerr"
+              >"dicke Baumwurzeln in etwa 80 Meter Wasser"</mark
+            >
+            (bekanntlich ein häufiges Phänomen am Meeresgrund) und sorgte sich
+            bei Seegras-Attrappen um den "Grenzdurchmesser des Sprengstoffs".
+            Das knallharte Fazit des Experten: Wegen der Strömung seien
+            Pflanzenattrappen "ausgeschlossen". <br /><br />
+            <b>Die Erkenntnis:</b> Niemandem – weder der Redaktion noch dem
+            Experten – fiel auf, dass sie gerade über die Wachstumszyklen von
+            Sprengstoff diskutieren.
+          </p>
+          <p class="party-highlight-description">
+            Das Ergebnis druckte die Tagesschau triumphierend ab: Der Experte
+            nannte die (vom Faktenfinder erfundene) Idee
+            <b>"abenteuerlich"</b> und <b>"ausgeschlossen"</b>. <br /><br />
+            <i
+              >Zitat aus der Original-Version: "Aufgrund der Plastizität [...]
+              hält Domjahn es für 'ausgeschlossen', dass unauffällige
+              Pflanzenattrappen zum Einsatz kamen."</i
+            >
+          </p>
+          <p class="party-highlight-description">
+            <b>Fazit:</b> Der ARD-Faktenfinder hat erfolgreich eine These
+            widerlegt, die <b>nur in seinem eigenen Kopf</b> aufgrund mangelnder
+            Englischkenntnisse existierte. Hersh hatte nie von Pflanzen
+            gesprochen. Das ist kein Journalismus, das ist teuer bezahlte
+            Comedy.
+          </p>
+
+          <p class="party-highlight-description">
+            Der Fehler löste einen berechtigten <b>Shitstorm</b> in den sozialen
+            Medien aus. Es offenbarte sich ein strukturelles Versagen: Das
+            komplexe Thema wurde offenbar von nur einem einzigen Redakteur
+            bearbeitet, ohne jegliche fachliche <b>Qualitätsprüfung</b>.
+          </p>
+
+          <p class="party-highlight-description">
+            Statt Transparenz zu schaffen, wurde der Artikel später
+            stillschweigend korrigiert ("Hohlladungen"). Eine echte Aufarbeitung
+            fand nie statt. Dass ein hauptberuflicher "Faktenfinder" den
+            Phantasiebegriff "Pflanzensprengstoff" nicht einmal gegoogelt hat,
+            lässt sich mit gesundem Menschenverstand kaum erklären.
+            <i>"Das hat Sprengkraft!"</i> – leider nur im Sinne journalistischer
+            Inkompetenz, finanziert durch Zwangsgebühren.
+          </p>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> Februar 2023
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://www.freilich-magazin.com/gesellschaft/ard-faktenfinder-blamiert-sich-mit-uebersetzungsfehler"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Freilich-Magazin: ARD-Faktenfinder blamiert sich mit
+              Übersetzungsfehler
+            </a>
+          </p>
+
+          <p class="party-highlight-hashtags">
+            <span class="hashtag">#pflanzensprengstoff</span>
+            <span class="hashtag">#faktenfinder</span>
+            <span class="hashtag">#nordstream</span>
+            <span class="hashtag">#tagesschau</span>
+            <a href="./">#oerr</a>
+            <span class="hashtag">#gebuehrenverschwendung</span>
           </p>
         </div>
       </div>
