--- a/oerr/index.html
+++ b/oerr/index.html
@@ -282,7 +282,7 @@
 
         <!-- Skandal-Skala -->
         <div class="highlight-skandal-scale">
-          <h4>ARD-Fakten: 1/10</h4>
+          <h4>Seriosität von ARD-Fakten: 1/10</h4>
           <div class="gradient-bar-container">
             <!-- ÖRR nutzt kritisches Rot für den Füllstand via CSS Variablen -->
             <div class="gradient-bar-filled" style="width: 10%"></div>
@@ -302,8 +302,8 @@
             <mark class="oerr">8,5 Milliarden Euro</mark> im Jahr
             Qualitätsjournalismus simulieren möchte? Richtig: Man nimmt einen
             englischen Fachbegriff, übersetzt ihn falsch und befragt dann
-            ernsthaft einen deutschen Experten, warum der Autor (den man
-            diskreditieren will) so einen Unsinn schreibt.
+            ernsthaft einen Experten, warum der Autor (den man diskreditieren
+            will) so einen Unsinn schreibt.
           </p>
           <p class="party-highlight-description">
             Am 23. Februar 2023 leistete sich der <b>ARD-Faktenfinder</b> unter
@@ -318,9 +318,10 @@
           <p class="party-highlight-description">
             <b>Die Experten-Analyse:</b><br />
             Statt kurz innezuhalten, rief die Tagesschau den
-            Sprengstoff-Experten <b>David Domjahn</b> (KIT) an, um diese
-            botanische Sensation physikalisch zu prüfen. Der Experte versuchte
-            daraufhin ernsthaft, Logik in den Übersetzungsfehler zu bringen:
+            Sprengstoff-Experten <b>David Domjahn</b> (Karlsruher Institut für
+            Technologie - KIT) an, um diese botanische Sensation physikalisch zu
+            prüfen. Der Experte versuchte daraufhin ernsthaft, Logik in den
+            Übersetzungsfehler zu bringen:
           </p>
           <p
             class="party-highlight-description"
@@ -383,6 +384,17 @@
             Inkompetenz, finanziert durch Zwangsgebühren.
           </p>
 
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/C1NcMSOTopk?si=CDzdiscdTDCI4wTM"
+                title="ARD 'Faktenfinder' phantasiert von Sprengstoff in Form von Pflanzen"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Februar 2023
           </p>
@@ -401,6 +413,7 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#pflanzensprengstoff</span>
             <span class="hashtag">#faktenfinder</span>
+            <a href="./">#ard</a>
             <span class="hashtag">#nordstream</span>
             <span class="hashtag">#tagesschau</span>
             <a href="./">#oerr</a>
