--- a/oerr/index.html
+++ b/oerr/index.html
@@ -380,8 +380,8 @@
             fand nie statt. Dass ein hauptberuflicher "Faktenfinder" den
             Phantasiebegriff "Pflanzensprengstoff" nicht einmal gegoogelt hat,
             lässt sich mit gesundem Menschenverstand kaum erklären.
-            <i>"Das hat Sprengkraft!"</i> – leider nur im Sinne journalistischer
-            Inkompetenz, finanziert durch Zwangsgebühren.
+            <i>Das hat Sprengkraft</i> – leider aber nur im Sinne
+            journalistischer Inkompetenz, finanziert durch Zwangsgebühren.
           </p>
 
           <div class="smallvideo-container">
